--- a/src/main/resources/admin-config.properties
+++ b/src/main/resources/admin-config.properties
@@ -4,3 +4,4 @@ admin.renderControlSidebar=false
 admin.controlSidebar.showOnMobile=true
 admin.breadcrumbSize=5
 admin.skin=skin-green
+admin.renderBreadCrumb=true
