--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,19 @@
 			<version>2.0.0</version>
 		</dependency>
 
+		<!-- For Datable export to Excel -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>4.1.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
+		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>2.1.7</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>master-distributeur</finalName>
