--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #App config
 spring.application.name=masterd
 server.port=8080
+server.address=0.0.0.0
 
 ## MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/airtime
